[build-system]
requires = [
    "scikit-build-core>=0.10.7",
    "pybind11",
    "wheel",
]
build-backend = "scikit_build_core.build"

[project]
name = "pymusly"
version = "0.1.0"
description = "Python bindings for libmusly to perform music similarity computation."
readme = "README.md"
license = { file = "LICENSE.txt" }
authors = [
    { name = "Andreas Bannach", email = "andreas@borntohula.de" },
]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]


[project.optional-dependencies]
docs = [
    "sphinx ~= 7.4.7"
]
lint = [
    "ruff ~= 0.6.9"
]
test = [
    "pytest-cov ~= 5.0.0"
]

[tool.scikit-build]
wheel.expand-macos-universal-tags = true
wheel.packages = ["src/pymusly"]
minimum-version = "build-system.requires"
cmake.source-dir = "native"
build.verbose = true
wheel.exclude = [
    # cmake on manylinux can't help itself to install all that crap
    "include",
    "lib64",
    "lib",
    "bin",
    "share"
]

[tool.cibuildwheel]
manylinux-x86_64-image = "manylinux_2_28"
manylinux-aarch64-image = "manylinux_2_28"
musllinux-x86_64-image = "musllinux_1_2"
musllinux-aarch64-image = "musllinux_1_2"

[[tool.cibuildwheel.overrides]]
select = "*-manylinux*"
before-build = [
    "yum install --nogpgcheck https://mirrors.rpmfusion.org/free/el/rpmfusion-free-release-8.noarch.rpm -y",
    "yum install ffmpeg-devel cmake -y"
]

[[tool.cibuildwheel.overrides]]
select = "*-musllinux*"
before-all = [
    "apk add ffmpeg-dev cmake"
]

[tool.pytest.ini_options]
minversion = 8.0
addopts = [
    "-ra",
    "--showlocals",
    "--strict-markers",
    "--strict-config"
]
xfail_strict = true
filterwarnings = [
    "error",
    "ignore::pytest.PytestCacheWarning"
]
testpaths = [
    "tests"
]
