[build-system]
requires = [
    "scikit-build-core>=0.10.7",
    "pybind11",
    "cmake>=3.23"
]
build-backend = "scikit_build_core.build"

[project]
name = "pymusly"
version = "2.0.0"
description = "Python bindings to libmusly for performing music similarity computation."
readme = "README.md"
license = { file = "LICENSE.txt" }
authors = [
    { name = "Andreas Bannach", email = "andreas@borntohula.de" },
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

[project.urls]
Repository = "https://github.com/andban/pymusly.git"
Issues = "https://github.com/andban/pymusly/issues"

[project.optional-dependencies]
doc = [
    "sphinx >= 7.4.7,< 9.2.0"
]
dev = [
    "cmakelang >= 0.6.13,< 0.7.0",
    "gcovr >= 8.2,< 8.6",
    "pytest >= 9.0.0,< 9.1.0",
    "pytest-cov >= 7.0,< 7.1",
    "pytest-mock >= 3.14.0,< 3.16.0",
    "PyYAML >= 6.0.2,< 6.1.0", # needed to load cmake-format config
    "ruff >= 0.6.9,< 0.15.0 ",
]

[tool.scikit-build]
wheel.expand-macos-universal-tags = true
wheel.packages = ["src/pymusly"]
minimum-version = "build-system.requires"
cmake.source-dir = "native"
build.verbose = true

[tool.pytest.ini_options]
minversion = 8.0
addopts = [
    "-ra",
    "--showlocals",
    "--strict-markers",
    "--strict-config",
]


[tool.cibuildwheel]
enable = []
skip = "*-musllinux*"
manylinux-x86_64-image = "manylinux_2_34"
manylinux-aarch64-image = "manylinux_2_34"

[tool.cibuildwheel.linux]
archs = "aarch64 x86_64"
before-build = """
dnf update -y
dnf install -y libavcodec-free-devel libavformat-free-devel libavutil-free-devel libswresample-free-devel
"""

[tool.cibuildwheel.macos]
archs = "x86_64 universal2"

[tool.cibuildwheel.windows]
archs = "AMD64"
environment = { "CMAKE_GENERATOR" = "Ninja"  }

